# cryptarch

./: .env.example  .gitignore  README.md  pyproject.toml
cryptarch/: __init__.py  __main__.py
cryptarch/core/: allocator.py  attribution.py  config.py  engine.py  risk.py  safeguards.py
cryptarch/db/: schema.sql  store.py
cryptarch/exchanges/: base.py  ccxt_client.py  deribit_options.py  pool.py
cryptarch/sim/: realistic.py
cryptarch/strategies/: allocator_executor.py  l1_executor.py  l1_funding.py  l2_cascade.py  l2_executor.py  l2_signal.py  l3_executor.py  l3_tail.py
scripts/: ai.cryptarch.trader.plist  backtest_candidate_universe.py  backtest_l2_tail_rungs.py  probe_l2_signal.py  run_cryptarch.sh
tests/: test_allocator.py  test_allocator_executor.py  test_attribution.py  test_l1_executor.py  test_l1_funding.py  test_l2_cascade.py  test_l2_executor.py  test_l2_signal.py  test_l3_executor.py  test_l3_tail.py  test_risk.py  test_safeguards.py  test_simulator.py
